adding to t-brach first time

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background-color: aliceblue; */
-}
+  background-color: aliceblue;
+} */
 
 /* font-family: 'Poppins', sans-serif; */
 /* font-family: 'Playfair Display', serif; */
 
 /* //navbar css */
-.navbar {
+/* .navbar {
   font-family: 'Poppins', sans-serif;
   font-size: 17px;
   line-height: 26px;
@@ -33,19 +36,19 @@
   font-weight: 700;
   font-family: 'roboto', sans-serif;
   letter-spacing: 3px;
-}
+} */
 /* =============================
 ==========footer============= */
 
-.footer {
+/* .footer {
   color: white;
   padding: 25px;
-  background: #000000; /* fallback for old browsers */
+  background: #000000;
   background: -webkit-linear-gradient(
     to right,
     #434343,
     #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  );
   background: linear-gradient(to right, #434343, #000000);
 }
 
@@ -58,10 +61,10 @@
 .footer a:hover {
   color: #ffefba;
   border-bottom: 1px solid #ffefba;
-}
+} */
 /* =================================
 ======== page not found css ======= */
-.pnf {
+/* .pnf {
   display: flex;
   min-height: 65vh;
   flex-direction: column;
@@ -88,20 +91,20 @@
 .pnf-btn:hover {
   background-color: black;
   color: white;
-}
+} */
 /* ========================================= */
 /* =========contact us ========= */
-.contactus {
+/* .contactus {
   margin: 0;
   padding: 0;
   height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 /* ========================================= */
 /* ========product-link ========= */
-.product-link {
+/* .product-link {
   text-decoration: none !important;
   color: black !important;
-}
+} */
