--- a/client/src/styles/AuthStyle.css
+++ b/client/src/styles/AuthStyle.css
@@ -1,6 +1,6 @@
 /* ===================================
 ========= register page  */
-.form-container {
+/* .form-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -39,17 +39,17 @@
 
 .form-container form button:hover {
   border: 1px solid black;
-  background: #000000; /* fallback for old browsers */
+  background: #000000;
   background: -webkit-linear-gradient(
     to right,
     #434343,
     #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  );
   background: linear-gradient(
     to right,
     #434343,
     #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  );
 }
 
 .forgot-btn {
@@ -59,4 +59,4 @@
 
 .forgot-btn:hover {
   color: white !important;
-}
+} */
